@@ -60,8 +60,6 @@ confluence_views = [500,501,502,503,504,508]
 def TOPLEVELCATEGORIES():
 
     url = strUrl + '/sagex/api?command=GetInstalledPlugins&encoder=json'
-    maxTries = 8
-    tries = 0
     plugins = executeSagexAPIJSONCall(url, "Result")
 
     if(plugins == None or len(plugins) == 0):
@@ -140,6 +138,7 @@ def VIEWLISTOFEPISODESFORSHOW(url,name):
         studio = mfSubset.get("AiringChannelName")
         isFavorite = mfSubset.get("IsFavorite")
         watchedDuration = mfSubset.get("WatchedDuration")
+        fileDuration = mfSubset.get("FileDuration")
         isWatched = mfSubset.get("IsWatched")
         
         startTime = float(mfSubset.get("AiringStartTime") // 1000)
@@ -173,7 +172,7 @@ def VIEWLISTOFEPISODESFORSHOW(url,name):
         strFilepath = mfSubset.get("SegmentFiles")[0]
         
         imageUrl = strUrl + "/sagex/media/poster/" + strMediaFileID
-        addMediafileLink(strDisplayText,filemap(strFilepath),strDescription,imageUrl,strGenre,strOriginalAirdate,strAiringdate,strTitle,strMediaFileID,strAiringID,seasonNum,episodeNum,studio,isFavorite,isWatched)
+        addMediafileLink(strDisplayText,filemap(strFilepath),strDescription,imageUrl,strGenre,strOriginalAirdate,strAiringdate,strTitle,strMediaFileID,strAiringID,seasonNum,episodeNum,studio,isFavorite,isWatched,watchedDuration,fileDuration)
 
     xbmc.executebuiltin("Container.SetViewMode(504)")
 
@@ -324,6 +323,7 @@ def SEARCHFORRECORDINGS(url,name):
         studio = mfSubset.get("AiringChannelName")
         isFavorite = mfSubset.get("IsFavorite")
         watchedDuration = mfSubset.get("WatchedDuration")
+        fileDuration = mfSubset.get("FileDuration")
         isWatched = mfSubset.get("IsWatched")
         
         startTime = float(mfSubset.get("AiringStartTime") // 1000)
@@ -355,7 +355,7 @@ def SEARCHFORRECORDINGS(url,name):
         strFilepath = mfSubset.get("SegmentFiles")[0]
         
         imageUrl = strUrl + "/sagex/media/poster/" + strMediaFileID
-        addMediafileLink(strDisplayText,filemap(strFilepath),strDescription,imageUrl,strGenre,strOriginalAirdate,strAiringdate,strTitle,strMediaFileID,strAiringID,seasonNum,episodeNum,studio,isFavorite,isWatched)
+        addMediafileLink(strDisplayText,filemap(strFilepath),strDescription,imageUrl,strGenre,strOriginalAirdate,strAiringdate,strTitle,strMediaFileID,strAiringID,seasonNum,episodeNum,studio,isFavorite,isWatched,watchedDuration,fileDuration)
 
     xbmc.executebuiltin("Container.SetViewMode(504)")
 
@@ -428,7 +428,7 @@ def get_params():
                                 
         return param
 
-def addMediafileLink(name,url,plot,iconimage,genre,originalairingdate,airingdate,showtitle,mediafileid,airingid,seasonnum,episodenum,studio,isfavorite,iswatched):
+def addMediafileLink(name,url,plot,iconimage,genre,originalairingdate,airingdate,showtitle,mediafileid,airingid,seasonnum,episodenum,studio,isfavorite,iswatched,resumetime,totaltime):
         ok=True
         liz=xbmcgui.ListItem(name)
         scriptToRun = "special://home/addons/plugin.video.sagetv/contextmenuactions.py"
@@ -452,6 +452,9 @@ def addMediafileLink(name,url,plot,iconimage,genre,originalairingdate,airingdate
         else:
             liz.setInfo( type="Video", infoLabels={ "Title": name, "Plot": plot, "Genre": genre, "date": airingdate, "premiered": originalairingdate, "aired": originalairingdate, "TVShowTitle": showtitle, "season": seasonnum, "episode": episodenum, "studio": studio, "overlay": 6, "watched": False } )
 
+        liz.setProperty("resumetime",str(resumetime))
+        liz.setProperty("totaltime",str(totaltime))
+        
         liz.setIconImage(iconimage)
         liz.setThumbnailImage(iconimage)
         ok=xbmcplugin.addDirectoryItem(handle=int(sys.argv[1]),url=url,listitem=liz,isFolder=False)
