@@ -58,6 +58,7 @@ function GetMediaFilesForShowWithSubsetOfProperties(showtitle) {
       show.put('SegmentFiles', MediaFileAPI.GetSegmentFiles(mf));
       show.put('WatchedDuration', AiringAPI.GetWatchedDuration(mf));
       show.put('IsWatched', AiringAPI.IsWatched(mf));
+      show.put('FileDuration', MediaFileAPI.GetFileDuration(mf));
       shows.add(show);
    }
    return shows;
@@ -90,6 +91,7 @@ function SearchForMediaFiles(searchterm) {
           show.put('SegmentFiles', MediaFileAPI.GetSegmentFiles(mf));
           show.put('WatchedDuration', AiringAPI.GetWatchedDuration(mf));
           show.put('IsWatched', AiringAPI.IsWatched(mf));
+          show.put('FileDuration', MediaFileAPI.GetFileDuration(mf));
           shows.add(show);
       }
    }
